--- a/hanco1/package.json
+++ b/hanco1/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.4",
     "express": "^4.17.1",
     "node": "^16.9.1",
     "nodemon": "^2.0.12",
@@ -24,8 +25,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "startRun": "nodemon server"
   },
+  "proxy": "http://localhost:5000/"
+,
   "eslintConfig": {
     "extends": [
       "react-app",
